--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <ul class="flex items-center space-x-2 text-sm font-medium text-gray-500">
             <li>
-                <a class="inline-flex items-center px-3 py-2 rounded-lg" href="" target="_blank">
+                <a class="inline-flex items-center px-3 py-2 rounded-lg" href="https://www.lshtm.ac.uk/research/centres-projects-groups/shoar" target="_blank">
                     Learn More
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                         class="ml-1.5 w-4 h-4">
@@ -270,15 +270,14 @@
                         <h2 class="text-3xl font-bold sm:text-4xl">How can you contribute?</h2>
 
                         <p class="mt-4 text-gray-600">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut vero
-                            aliquid sint distinctio iure ipsum cupiditate? Quis, odit assumenda?
-                            Deleniti quasi inventore, libero reiciendis minima aliquid tempora.
-                            Obcaecati, autem.
+                            We have lots of ways you can get involved! Find what works best for you and your idea.
                         </p>
 
+                        <!-- Base -->
+
                         <a class="inline-flex items-center px-8 py-3 mt-8 text-white bg-indigo-600 border border-indigo-600 rounded hover:bg-transparent hover:text-indigo-600 active:text-indigo-500 focus:outline-none focus:ring"
-                            href="/get-started">
-                            <span class="text-sm font-medium "> Contact Us </span>
+                            href="mailto:junead.khan2@lshtm.ac.uk">
+                            <span class="text-sm font-medium "> Ask us a Question </span>
 
                             <svg class="w-5 h-5 ml-3" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
@@ -392,7 +391,7 @@
                         <p>Innovation. Does the proposed solution promote new ideas towards addressing the issues described?</p>
                     </li>
                     <li>
-                        <p>Potential for adaptation and implementation/p>
+                        <p>Potential for adaptation and implementation </p>
                     </li>
                 </ul>
             </div>
