--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
                         <p>Ideas on how to encourage inclusive practices in the provision of sexual health services</p>
                     </li>
                     <li>
-                        <p>Ideas on how to tailor sexual health services to the needs of older adults, including those
-                            with disabilities</p>
+                        <p>Ideas on how to tailor sexual health services to the needs of older adults</p>
                     </li>
                     <li>
                         <p>Ideas on messages/campaigns to enhance perception and uptake of sexual health services in
