--- a/index.html
+++ b/index.html
@@ -80,17 +80,24 @@
     <!-- Intro Hero-->
     <section class="bg-white dark:bg-gray-900">
         <div class="py-8 px-4 mx-auto max-w-screen-xl text-center lg:py-16 lg:px-12">
-            <h2
-                class="order-first text-3xl font-medium tracking-wide text-transparent bg-gradient-to-r from-blue-400 via-purple-600 to-orange-500 bg-clip-text">
-                Dissapointed with</h2>
 
             <h1
                 class="mt-1 text-4xl font-extrabold text-transparent uppercase tracking-tighest sm:text-5xl lg:text-7xl bg-gradient-to-r from-blue-400 via-purple-600 to-orange-500 bg-clip-text">
-                Sexual Health Services</h1>
+                Your Opinion Matters to Us!
+            
+                <button onclick="speak(0)" type="button"
+                class="py-2 px-3  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
+                    class="bi bi-volume-down-fill" viewBox="0 0 16 16">
+                    <path
+                        d="M9 4a.5.5 0 0 0-.812-.39L5.825 5.5H3.5A.5.5 0 0 0 3 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 9 12V4zm3.025 4a4.486 4.486 0 0 1-1.318 3.182L10 10.475A3.489 3.489 0 0 0 11.025 8 3.49 3.49 0 0 0 10 5.525l.707-.707A4.486 4.486 0 0 1 12.025 8z" />
+                </svg>
+            </button>
+        </h1>
 
             <h2
-                class="order-first text-3xl font-medium tracking-wide text-transparent bg-gradient-to-r from-blue-400 via-purple-600 to-orange-500 bg-clip-text mb-8">
-                in the UK and want to inspire change?
+                class="order-first px-16 mt-4 text-3xl font-medium tracking-wide text-transparent bg-gradient-to-r from-blue-400 via-purple-600 to-orange-500 bg-clip-text mb-8">
+                We are seeking ideas about how sexual health services for adults over the age of 45 can be improved in the UK.
                 <button onclick="speak(0)" type="button"
                     class="py-2 px-3  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -100,11 +107,10 @@
                     </svg>
                 </button>
             </h2>
-            </h1>
 
-            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">We are
-                seeking ideas about how sexual health services for adults over the age of 45 can be improved
-                in the UK. <button onclick="speak(1)" type="button"
+            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">“We have ladies in their 90s who don’t even know where their bits are. At the same time,
+                there are 70-year-old gay men who are taking stimulants while they have anal sex. There is
+                no one size fits all for sexual health among older adults.” <button onclick="speak(1)" type="button"
                     class="py-2 px-3  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                         class="bi bi-volume-down-fill" viewBox="0 0 16 16">
@@ -440,10 +446,10 @@
                     </svg>
                 </button>
             </h2>
-                <p class="mb-6">People have needs and desires for intimacy and sex, regardless of their age. Issues such
-                    as low sexual function, distress about sex, or an elevated risk for sexually transmitted infections
-                    are common throughout every point in life. These are further complicated by disabilities and chronic
-                    conditions that are common among people over 45 years old.
+                <p class="mb-6">People have needs and desires for intimacy and sex, regardless of their age. Issues such as
+low sexual function, distress about sex, or an elevated risk for sexually transmitted infections
+are common throughout every point in life. These are further complicated by disabilities and
+chronic conditions that are common as people approach the age of 45 and above.
                 <button onclick="speak(6)" type="button"
                 class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -456,8 +462,7 @@
 </p>
                 <p class="mb-6">Despite sexual health being an integral part of our overall health and wellbeing, sexual
                     health
-                    services in the UK often focus on younger populations. The UK population is ageing, and the current
-                    NHS services are not up to the standard needed to support our ageing society.
+                    services in the UK often focus on younger populations.
                     <button onclick="speak(7)" type="button"
                     class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -499,7 +504,7 @@
                                 <h2 class="text-lg font-semibold text-primary-500">Submission Themes</h2>
                                 <p
                                     class="mt-2 text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl dark:text-white">
-                                    What do we ask from you?
+                                    What do we need from you?
                                     <button onclick="speak(9)" type="button"
                                     class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
