--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R9ZDECLYJ1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R9ZDECLYJ1');
+</script>
+
 <body class="bg-gray-100 dark:bg-gray-900 ">
 
     <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
@@ -111,7 +121,7 @@
                 </button>
             </h2>
 
-            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">“We have ladies in their 90s who don’t even know where their bits are. At the same time,
+            <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">“We have ladies in their 90s who don’t know where their bits are. At the same time,
                 there are 70-year-old gay men who are taking stimulants while they have anal sex. There is
                 no one size fits all for sexual health among older adults.” <button onclick="speak(2)" type="button"
                     class="py-2 px-3  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
@@ -283,9 +293,10 @@
                 </button>
             </h2>
                 <p class="mb-6">People have needs and desires for intimacy and sex, regardless of their age. Issues such as
-low sexual function, distress about sex, or an elevated risk for sexually transmitted infections
+sexual difficulties, distress about sex, or an elevated risk for sexually transmitted infections
 are common throughout every point in life. These are further complicated by disabilities and
-chronic conditions that are common as people approach the age of 45 and above.
+chronic conditions that are common as people approach the age of 45 and above. Despite this, sexual
+health services in the UK often focus on younger populations.
                 <button onclick="speak(6)" type="button"
                 class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -296,18 +307,6 @@ chronic conditions that are common as people approach the age of 45 and above.
             </button>
 
 </p>
-                <p class="mb-6">Despite sexual health being an integral part of our overall health and wellbeing, sexual
-                    health
-                    services in the UK often focus on younger populations.
-                    <button onclick="speak(7)" type="button"
-                    class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
-                        class="bi bi-volume-down-fill" viewBox="0 0 16 16">
-                        <path
-                            d="M9 4a.5.5 0 0 0-.812-.39L5.825 5.5H3.5A.5.5 0 0 0 3 6v4a.5.5 0 0 0 .5.5h2.325l2.363 1.89A.5.5 0 0 0 9 12V4zm3.025 4a4.486 4.486 0 0 1-1.318 3.182L10 10.475A3.489 3.489 0 0 0 11.025 8 3.49 3.49 0 0 0 10 5.525l.707-.707A4.486 4.486 0 0 1 12.025 8z" />
-                    </svg>
-                </button>
-            </p>
 
                 <p>Improving access to and utilization of essential sexual health services is something that we
                     can change with your help!
@@ -602,7 +601,7 @@ chronic conditions that are common as people approach the age of 45 and above.
                     <div
                         class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                         <a>
-                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Langauge
+                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Language
                                 for Entries
                                 <button onclick="speak(21)" type="button"
                                 class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
@@ -828,7 +827,7 @@ chronic conditions that are common as people approach the age of 45 and above.
                                     d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z" />
                             </svg>
                         </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Orginality
+                        <h3 class="mb-2 text-xl font-bold dark:text-white">Originality
                             <button onclick="speak(27)" type="button"
                             class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
