--- a/index.html
+++ b/index.html
@@ -996,6 +996,34 @@ health services in the UK often focus on younger populations.
 
                     <details class="py-8 group">
                         <summary class="flex items-center justify-between cursor-pointer">
+                            <h5 class="text-lg font-medium">
+                                What happens after all these creative ideas are gathered?
+                            </h5>
+
+                            <span class="relative flex-shrink-0 ml-1.5 w-5 h-5">
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="absolute inset-0 w-5 h-5 opacity-100 group-open:opacity-0" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    class="absolute inset-0 w-5 h-5 opacity-0 group-open:opacity-100" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                                </svg>
+                            </span>
+                        </summary>
+
+                        <p class="mt-4 leading-relaxed text-gray-700 dark:text-gray-400">
+                            We will analyze all of the textual data and identify cross-cutting themes. We will then create a policy brief to help spur changes in the UK.
+                        </p>
+                    </details>
+
+                    <details class="py-8 group">
+                        <summary class="flex items-center justify-between cursor-pointer">
                             <h5 class="text-lg font-medium ">
                                 Is this call limited to a particular field in sexual health?
                             </h5>
