--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Open Call by SHOAR</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
+    <link rel="icon" type="image/png" href="/favicon.ico">
     <script src="tailwind.config.js"></script>
 
 
@@ -669,12 +669,11 @@ health services in the UK often focus on younger populations.
                             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Online Form
                             </h5>
                             <p class="font-normal text-sm text-gray-700 dark:text-gray-400">A submission of no more than
-                                500 words that describes your idea. This can be submitted as a single Word or text
-                                processing file via our online submission form as an attachment or as plain text on the
-                                form itself.</p>
+                                500 words that describes your idea, submitted as either a single Word or PDF attachment or as plain text on the
+                                form itself. Alternatively a video, image or audio file of no more than 2 minutes. Click this button to open the submission form.</p>
                         </a>
 
-                        <a href="#"
+                        <a href="https://wa.me/message/W3QEYKOCPYJIO1"
                             class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                             <svg class="mb-2 w-10 h-10 text-gray-500 dark:text-gray-400" aria-hidden="true"
                                 fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -685,10 +684,10 @@ health services in the UK often focus on younger populations.
                             </h5>
                             <p class="font-normal text-sm text-gray-700 dark:text-gray-400">A text submission of no more
                                 than 500 words, alternatively a video or audio file/message of no more than 2 minutes
-                                can be submitted directly via WhatsApp message to [WhatsApp number].</p>
+                                can be submitted directly via WhatsApp message to <strong>0808 304 4086</strong> or by clicking this button.</p>
                         </a>
 
-                        <a href="#"
+                        <a href="tel:+448083044086"
                             class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                             <svg class="mb-2 w-10 h-10 text-gray-500 dark:text-gray-400" aria-hidden="true"
                                 fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -697,12 +696,11 @@ health services in the UK often focus on younger populations.
                             </svg>
                             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Call Us
                             </h5>
-                            <p class="font-normal text-sm text-gray-700 dark:text-gray-400">A text submission of no more
-                                than 500 words, alternatively a video or audio file/message of no more than 2 minutes
-                                can be submitted directly via WhatsApp message to [WhatsApp number].</p>
+                            <p class="font-normal text-sm text-gray-700 dark:text-gray-400">A spoken word submission of no more than 2 minutes
+                                can be submitted by calling <strong>0808 304 4086</strong> or by clicking this button. <br><br><strong>Note:</strong> there may a 10 second dialing period before the submision system opens.</p>
                         </a>
 
-                        <a href="#"
+                        <a href = "mailto:opencall@shoar.co.uk?subject=Submission for Open Call&body=This is my submission for the SHOAR Open Call. I will leave an email address or phone number below if I would like to be considered for prizes. I will include any materials I would like to be considered as part of my submission as attachments if applicable.%0D%0A%0D%0AEmail Address of Phone Number: [your email or phone number] %0D%0A%0D%0ASubmission Text (if applicable): [your submission text]"                         
                             class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                             <svg class="mb-2 w-10 h-10 text-gray-500 dark:text-gray-400" aria-hidden="true"
                                 fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -711,12 +709,11 @@ health services in the UK often focus on younger populations.
                             </svg>
                             <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Email</h5>
                             <p class="font-normal text-sm text-gray-700 dark:text-gray-400">A submission of no more than
-                                500 words that describes your idea. This can be submitted as a single Word or text
-                                processing file via our online submission form as an attachment or as plain text on the
-                                form itself.</p>
+                                500 words that describes your idea, submitted as either a single Word or PDF attachment or as plain text on the
+                                email itself. Alternatively a video, image or audio file of no more than 2 minutes. Click here to send an email to us at <strong>opencall@shoar.co.uk</strong></p>
                         </a>
 
-                        <a href="#"
+                        <a id="defaultModalButton" data-modal-toggle="defaultModal" 
                             class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                             <svg class="mb-2 w-10 h-10 text-gray-500 dark:text-gray-400" aria-hidden="true"
                                 fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -729,9 +726,41 @@ health services in the UK often focus on younger populations.
                             </h5>
                             <p class="font-normal text-sm text-gray-700 dark:text-gray-400">Submission of one A4 page
                                 (prefer Times New Roman 12, single-spaced) that describes your innovation or idea. This
-                                can be submitted as a physical letter via postal letter to the following address:
-                                [Postal Address].</p>
+                                can be submitted as a physical letter via postal letter. Reimbusement is available for the postal costs if needed. Click here for further instructions.</p>
                         </a>
+
+                        <!-- Main modal -->
+<div id="defaultModal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-modal md:h-full">
+    <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
+        <!-- Modal content -->
+        <div class="relative p-4 bg-white rounded-lg shadow dark:bg-gray-800 sm:p-5">
+            <!-- Modal header -->
+            <div class="flex justify-between items-center pb-4 mb-4 rounded-t border-b sm:mb-5 dark:border-gray-600">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+                    Instructions for Postal Submission
+                </h3>
+                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="defaultModal">
+                    <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                    <span class="sr-only">Close modal</span>
+                </button>
+            </div>
+            <!-- Modal body -->
+            <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400 px-4">
+                <strong>Step 1 -</strong> Create a one-page A4 document (prefer Times New Roman 12, single-spaced) that describes your innovation or idea. Ensure you leave a phone number and email address if you would like to be considered for prizes.
+            </p>
+            <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400 px-4 pt-4">
+                <strong>Step 2 -</strong> Purchase a stamp and a postal letter envelope. You can purchase these from any post office or online.
+            </p>
+            <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400 px-4 pt-4">
+                <strong>Step 3 -</strong> Address the envelope to: <strong>The London School of Hygiene and Tropical Medicine, Keppel St, London WC1E 7HT, United Kingdom</strong><br> 
+            </p>
+            <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400 px-4 pt-4">
+                <strong>Step 4 -</strong> Keep your receipts, and email us at <strong>opencall@shoar.co.uk</strong> to request reimbursement for the postal costs.<br> 
+            </p>
+        </div>
+        </div>
+    </div>
+</div>
                     </div>
                 </div>
             </div>
