--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ health services in the UK often focus on younger populations.
                 <strong>Step 2 -</strong> Purchase a stamp and a postal letter envelope. You can purchase these from any post office or online.
             </p>
             <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400 px-4 pt-4">
-                <strong>Step 3 -</strong> Address the envelope to: <strong>The London School of Hygiene and Tropical Medicine, Keppel St, London WC1E 7HT, United Kingdom</strong><br> 
+                <strong>Step 3 -</strong> Address the envelope to: <strong>Dr Eneyi Kpokiri, SHOAR Research Group, Room 360, London School of Hygiene and Tropical Medicine, Keppel Street, London, WC1E 7HT, United Kingdom</strong><br> 
             </p>
             <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400 px-4 pt-4">
                 <strong>Step 4 -</strong> Keep your receipts, and email us at <strong>opencall@shoar.co.uk</strong> to request reimbursement for the postal costs.<br> 
