--- a/index.html
+++ b/index.html
@@ -895,6 +895,40 @@ health services in the UK often focus on younger populations.
             </div>
     </section>
 
+    <!-- Prizes -->
+
+    <section class="py-12 bg-white dark:bg-gray-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+          <div class="text-center ">
+            <h2 class="text-lg font-semibold text-primary-500">What can you win?</h2>
+            <h2 class="text-3xl font-bold leading-9 dark:text-white">Prizes</h2>
+            <p class="mt-2 text-xl leading-7 text-gray-400">Exceptional entries will receive Gift Card or Cash prizes in addition to tickets for social outings at popular attractions in the UK. <br><br> Examples include (but are not limited to):</p>
+          </div>
+          <div class="mt-10 flex justify-center ">
+            <div class="mx-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+              <img class="w-full" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0ACcsrycT_OZ8SqfZekKqZNCsDXiB70KN-acj9VLc84dYn7D9iQL34rSf0MN1BQfkUJk&usqp=CAU" alt="Sunset in the mountains">
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2 dark:text-white">Tickets for Kew Gardens with Afternoon Tea for Two</div>
+              </div>
+            </div>
+            <div class="mx-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+              <img class="w-full" src="https://vedcdn.imgix.net/images/product/main/two-night-cotswolds-break-14125613.jpg?auto=compress,format&w=1920&q=80&fit=max" alt="Sunset in the mountains">
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2 dark:text-white">Two Night Cotswolds Break for Two</div>
+                
+              </div>
+            </div>
+            <div class="mx-4 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700 dark:text-white">
+              <img class="w-full" src="https://vedcdn.imgix.net/images/product/main/visit-to-buckingham-palace-20104518.jpg?auto=compress,format&w=1920&q=80&fit=max" alt="Sunset in the mountains">
+              <div class="px-6 py-4">
+                <div class="font-bold text-xl mb-2">Visit to Buckingham Palace and Three Course Lunch For Two</div>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
     <!-- FAQs-->
 
     <section class="bg-white dark:bg-gray-900 dark:text-gray-600">
