changed wording from Open call to call for ideas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Call by SHOAR</title>
+    <title>Call for Ideas by SHOAR</title>
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
@@ -700,7 +700,7 @@ health services in the UK often focus on younger populations.
                                 can be submitted by calling <strong>0808 304 4086</strong> or by clicking this button. <br><br><strong>Note:</strong> there may a 10 second dialing period before the submision system opens.</p>
                         </a>
 
-                        <a href = "mailto:opencall@shoar.co.uk?subject=Submission for Open Call&body=This is my submission for the SHOAR Open Call. I will leave an email address or phone number below if I would like to be considered for prizes. I will include any materials I would like to be considered as part of my submission as attachments if applicable.%0D%0A%0D%0AEmail Address of Phone Number: [your email or phone number] %0D%0A%0D%0ASubmission Text (if applicable): [your submission text]"                         
+                        <a href = "mailto:opencall@shoar.co.uk?subject=Submission for Call for Ideas&body=This is my submission for the SHOAR Call for Ideas. I will leave an email address or phone number below if I would like to be considered for prizes. I will include any materials I would like to be considered as part of my submission as attachments if applicable.%0D%0A%0D%0AEmail Address of Phone Number: [your email or phone number] %0D%0A%0D%0ASubmission Text (if applicable): [your submission text]"                         
                             class="block p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md hover:bg-gray-100 dark:bg-gray-800 dark:border-gray-700 dark:hover:bg-gray-700">
                             <svg class="mb-2 w-10 h-10 text-gray-500 dark:text-gray-400" aria-hidden="true"
                                 fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -941,7 +941,7 @@ health services in the UK often focus on younger populations.
                     <details class="py-8 group">
                         <summary class="flex items-center justify-between cursor-pointer">
                             <h5 class="text-lg font-medium">
-                                What is an open call?
+                                What is a call for ideas?
                             </h5>
 
                             <span class="relative flex-shrink-0 ml-1.5 w-5 h-5">
@@ -962,7 +962,7 @@ health services in the UK often focus on younger populations.
                         </summary>
 
                         <p class="mt-4 leading-relaxed text-gray-700 dark:text-gray-400">
-                            Open calls are ways in which the public is called upon to solve a problem via the
+                            Call for ideas are a way in which the public is called upon to solve a problem via the
                             solicitation of “ideas, reports or strategies.”
                         </p>
                     </details>
@@ -1255,7 +1255,7 @@ health services in the UK often focus on younger populations.
                         </summary>
 
                         <p class="mt-4 leading-relaxed text-gray-700 dark:text-gray-400">
-                            You can also increase participation in this open call by sharing the details with colleagues
+                            You can also increase participation in this call for ideas by sharing the details with colleagues
                             and friends in-person and online using social media channels.
                         </p>
                     </details>
