--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@ health services in the UK often focus on younger populations.
                                     d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z" />
                             </svg>
                         </div>
-                        <h3 class="mb-2 text-xl font-bold dark:text-white">Originality
+                        <h3 class="mb-2 text-xl font-bold dark:text-white">Potential for Impact
                             <button onclick="speak(27)" type="button"
                             class="py-2 px-2  text-sm font-medium text-center text-gray-700  rounded-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:text-gray-400 dark:hover:bg-gray-800 dark:focus:ring-blue-800">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
@@ -866,8 +866,7 @@ health services in the UK often focus on younger populations.
                             </svg>
                             </button>
                         </h3>
-                        <p class="text-gray-500 dark:text-gray-400">Does the proposed solution promote new ideas towards
-                            addressing the issues described?</p>
+                        <p class="text-gray-500 dark:text-gray-400">To what extent does the proposed idea reflect needs at the community and societal level or addresses the issues described</p>
                     </div>
                     <div>
                         <div
