changed title to call for ideas

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 
             </div>
             <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="navbar-cta">
-                <p class="dark:text-white">Improving Sexual Health Services for Over 45s in the United Kingdom: An Open
-                    Call</p>
+                <p class="dark:text-white">Improving Sexual Health Services for Over 45s in the United Kingdom: A Call for Ideas</p>
             </div>
         </div>
     </nav>
